--- a/README.adoc
+++ b/README.adoc
@@ -20,6 +20,13 @@ Remove not `go-*.yml` files if you want to setup Go environment.
 rm ./github/workflows/nim-*.yml
 ----
 
+And set your text to `TODO`.
+
+[source,bash]
+----
+grep "TODO" .github/workflows/*
+----
+
 == Usage
 
 [source,bash]
